--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <div class="envelope new">
   <div class="front">
     <div class="stamp">
-        <img src="https://i.ibb.co/48mCz8q/76392874974602fc73c460f3982498e1.png" alt="stamp" width="100%">
+        <img src="https://th.bing.com/th/id/OIP.LV-Cw0Ni4jJgzBUmMqleQQHaHa?w=170&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7" alt="stamp" width="100%">
     </div>
     <div class="to-from">
-      <p>To: Mommy</p>
-      <p>From: Gabrielle</p>
+      <p>To: Mami</p>
+      <p>From: Esteban</p>
     </div>
   </div>
   <div class="back">
