--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="envelope new">
   <div class="front">
     <div class="stamp">
-        <img src="https://th.bing.com/th/id/OIP.LV-Cw0Ni4jJgzBUmMqleQQHaHa?w=170&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7" alt="stamp" width="100%">
+        <img src="https://th.bing.com/th/id/OIP.ThFxe20NhlUK3_wrI-q-FgHaEK?w=303&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7" alt="stamp" width="100%">
     </div>
     <div class="to-from">
       <p>To: Mami</p>
@@ -21,7 +21,7 @@
   </div>
   <div class="back">
     <div class="letter">
-        <img src="https://i.ibb.co/xSjbz3B/Nobody-is-better-at-motherhood-than-you-2.jpg" alt="card message" width="100%">
+        <img src="https://th.bing.com/th/id/OIP.LV-Cw0Ni4jJgzBUmMqleQQHaHa?w=170&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7" alt="card message" width="100%">
     </div>
     <div class="flap left-flap"></div>
     <div class="flap right-flap"></div>
