--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<div class="letter"></div>
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
@@ -21,16 +21,14 @@
   </div>
   <div class="back">
     <div class="letter">
-        <video src="https://www.youtube.com/watch?v=j9FegbC2_mE&ab_channel=YessaminLopezMendoza" width="1920" height="1080" autoplay loop></video>
+        <iframe width="500" height="320" src="https://www.youtube.com/embed/j9FegbC2_mE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen title="Mother's Day Video"></iframe>
     </div>
     <div class="flap left-flap"></div>
     <div class="flap right-flap"></div>
     <div class="flap bottom-flap"></div>
     <div class="flap top-flap"></div>
-  </div>
 </div>
 
-<!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="./script.js"></script>
 
 </body>
